<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/mainMenuTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:text="@string/coffeeshop"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuImage"
        tools:context="com.example.coffeeshop.MainActivity" />

    <Button
        android:id="@+id/orderDonutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="makeNewStage"
        android:text="@string/order_donuts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/orderCoffeeButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuTitle"
        app:layout_constraintVertical_bias="0.197" />

    <Button
        android:id="@+id/orderCoffeeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="makeNewStage"
        android:text="@string/order_coffee"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/orderDonutButton"
        app:layout_constraintTop_toBottomOf="@+id/mainMenuTitle"
        app:layout_constraintVertical_bias="0.199" />

    <Button
        android:id="@+id/storeOrdersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="makeNewStage"
        android:text="@string/store_orders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/currOrdersButton"
        app:layout_constraintTop_toBottomOf="@+id/orderCoffeeButton"
        app:layout_constraintVertical_bias="0.153" />

    <Button
        android:id="@+id/currOrdersButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="makeNewStage"
        android:text="@string/current_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/storeOrdersButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orderDonutButton"
        app:layout_constraintVertical_bias="0.153" />

    <ImageView
        android:id="@+id/mainMenuImage"
        android:layout_width="409dp"
        android:layout_height="232dp"
        android:contentDescription="@string/mainmenuimage"
        android:src="@drawable/donuts_bg"
        app:layout_constraintBottom_toTopOf="@+id/mainMenuTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>
